# atkmm

./: .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.am  NEWS  README  README.md  README.win32.md  atkmm.doap  configure.ac  meson.build  meson_options.txt
MSVC_NMake/: Makefile.vc  atkmm-install.props  atkmm-version-paths.props  atkmm.sln  atkmm.vcxproj  build-rules-msvc.mak  config-msvc.mak  create-lists-msvc.mak  filelist.am  gendef.vcxproj  generate-msvc.mak  get-gmmproc-ver.bat  info-msvc.mak  install.mak  install.vcxproj
MSVC_NMake/atkmm/: meson.build
MSVC_NMake/gendef/: gendef.cc
MSVC_Net2005/: atkmm.sln  filelist.am
MSVC_Net2005/atkmm/: atkmm.vcproj
MSVC_Net2005/gendef/: gendef.vcproj
MSVC_Net2008/: atkmm-build-defines.vsprops  atkmm-install.vsprops  atkmm-version-paths.vsprops  atkmm.sln  atkmm.vcproj  filelist.am  gendef.vcproj  install.vcproj
MSVC_Net2008/atkmm/: atkmm.vcproj
MSVC_Net2008/gendef/: gendef.vcproj
MSVC_Net2010/: atkmm-build-defines.props  atkmm-install.props  atkmm-version-paths.props  atkmm.sln  atkmm.vcxproj  filelist.am  gendef.vcxproj  install.vcxproj
MSVC_Net2010/atkmm/: atkmm.vcxproj  atkmm.vcxproj.filters
MSVC_Net2013/: atkmm-build-defines.props  atkmm-install.props  atkmm.vcxproj  atkmm.vcxproj.filters  gendef.vcxproj
MSVC_Net2017/: atkmm-build-defines.props  atkmm-version-paths.props  atkmm.sln  atkmm.vcxproj  filelist.am
MSVC_Net2017/atkmm/PaxHeaders.15870/: atkmm.rc  atkmm.rc.in  atkmmconfig.h
MSVC_Net2017/gendef/PaxHeaders.15870/: gendef.cc
atk/: atkmm-uninstalled.pc.in  atkmm.h  atkmm.pc.in  atkmmconfig.h.in  atkmmconfig.h.meson  meson.build
atk/atkmm/: .gitignore  Makefile.am  filelist.am  filelist.gmake.am  init.cc  init.h  meson.build  wrap_init.h
atk/src/: Makefile.am  action.ccg  action.hg  atk_docs.xml  atk_docs_override.xml  atk_enums.defs  atk_methods.defs  atk_signals.defs  atk_signals.defs.patch  component.ccg  component.hg  document.ccg  document.hg  editabletext.ccg  editabletext.hg  filelist.am  hyperlink.ccg  hyperlink.hg  hypertext.ccg  hypertext.hg  image.ccg  image.hg  implementor.ccg  implementor.hg  noopobject.ccg  noopobject.hg  object.ccg  object.hg  objectaccessible.ccg  objectaccessible.hg  range.ccg  range.hg  relation.ccg  relation.hg  relationset.ccg  relationset.hg  selection.ccg  selection.hg  stateset.ccg  stateset.hg  (+8 more)
codegen/: Makefile.am  generate_defs_and_docs.sh
codegen/extradefs/: generate_extra_defs_atk.cc  meson.build
codegen/m4/: convert.m4  convert_atk.m4  filelist.am
doc/: Makefile.am
doc/reference/: .gitignore  Doxyfile.in  meson.build
subprojects/: atk.wrap
untracked/: README
